language/tests/error/InvalidAssignmentInBinOp.hashem
bebin double(x) {
  bede 2 * x;
}

bebin azinja() {
  5 + double(2) = 4;
}
